--- a/FlightStabilization/FlightStabilization.vcxproj.filters
+++ b/FlightStabilization/FlightStabilization.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="PinConfiguration.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TimeInterval.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PWMReader.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PinConfiguration.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TimeInterval.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
