--- a/FlightStabilization/FlightStabilization.vcxproj.filters
+++ b/FlightStabilization/FlightStabilization.vcxproj.filters
@@ -42,6 +42,24 @@
     <ClInclude Include="TimeInterval.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="imumaths.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="matrix.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="quaternion.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="vector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Adafruit_BNO055.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Adafruit_Sensor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PWMReader.cpp">
@@ -60,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TimeInterval.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Adafruit_BNO055.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
